<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_note_list">NoteListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="how_many_nav_title">How many</string>

    <string name="how_many_nav_value">Notes: %1$d | Courses: %2$d</string>
    <string name="notes_title_nav_menu">Notes</string>
    <string name="courses_title_nav_menu">Courses</string>
    <string name="recently_viewed_notes_title_nav_menu">Recently Viewed Notes</string>
    <string name="share_title_nav_menu">Share</string>
    <string name="send_title_nav_menu">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_general_category_title">General</string>
    <string name="settings_status_default_value">Turn wounds into wisdom</string>
    <string name="settings_status_key">key_status</string>
    <string name="settings_status_title">Status</string>
    <string name="settings_status_dialog_title">Update status</string>
    <string name="settings_track_recent_notes_key">track_recent_notes</string>
    <string name="settings_track_recent_notes_summary">Keep track of recent visited notes</string>
    <string name="settings_track_recent_notes_title">Track Recent Notes</string>
    <string name="settings_recent_notes_count_key">key_recent_notes_count</string>
    <string name="settings_recent_notes_count_title">Recent notes count</string>
    <string name="settings_recent_notes_count_dialog_title">Select recent visited notes counts to display</string>
    <string name="settings_note_level_key">key_note_level</string>
    <string name="settings_note_level_title">Note default level</string>
    <string name="settings_note_level_dialog_title">Select default note level</string>
    <string name="settings_app_category_title">App</string>
    <string name="settings_account_settings_key">key_account_settings</string>
    <string name="settings_account_settings_summary">Privacy, security</string>
    <string name="settings_account_settings_title">Account settings</string>
    <string name="settings_auto_download_key">key_auto_download</string>
    <string name="settings_auto_download_summary">Automatically download data when connected to wi-fi</string>
    <string name="settings_auto_download_title">Auto download</string>
    <string name="settings_new_course_notification_key">key_new_course_notification</string>
    <string name="settings_new_course_notification_title">New course notification</string>
    <string name="settings_about_category_title">About</string>
    <string name="settings_app_version_key">key_app_version</string>
    <string name="settings_app_version_summary">1.0</string>
    <string name="settings_app_version_title">Version</string>
    <string name="settings_privacy_policy_key">key_privacy_policy</string>
    <string name="settings_privacy_policy_title">Privacy policy</string>

    <string name="reminder_notification_title">Review: %1$s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="facebook_application_id" translatable="false">4510292135703315</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb4510292135703315</string>

</resources>