<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_general_category_title"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:defaultValue="@string/settings_status_default_value"
            android:key="@string/settings_status_key"
            android:title="@string/settings_status_title"
            app:dialogTitle="@string/settings_status_dialog_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/settings_track_recent_notes_key"
            android:summary="@string/settings_track_recent_notes_summary"
            android:title="@string/settings_track_recent_notes_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:dependency="@string/settings_track_recent_notes_key"
            android:entries="@array/entries_recent_display_count"
            android:entryValues="@array/values_recent_display_count"
            android:key="@string/settings_recent_notes_count_key"
            android:title="@string/settings_recent_notes_count_title"
            app:dialogTitle="@string/settings_recent_notes_count_dialog_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:entries="@array/entries_note_level"
            android:entryValues="@array/values_note_level"
            android:key="@string/settings_note_level_key"
            android:title="@string/settings_note_level_title"
            app:dialogTitle="@string/settings_note_level_dialog_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="App"
        app:iconSpaceReserved="false">

        <Preference
            android:key="key_account_settings"
            android:summary="Privacy, security"
            android:title="Account settings"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="key_auto_download"
            android:summary="Automatically download data when connected to wi-fi"
            android:title="Auto download"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="key_new_course_notification"
            android:title="New course notification"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="About"
        app:iconSpaceReserved="false">

        <Preference
            android:defaultValue="1.0"
            android:key="key_app_version"
            android:summary="1.0"
            android:title="Version"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="key_privacy_policy"
            android:title="Privacy policy"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>